# polars-prompt

./: .gitignore  README.md  justfile  noxfile.py  pyproject.toml
.workflows/github/: ci.yml
assets/: demo.tape
src/polars_prompt/: main.py
tests/: test_evaluate_user_input.py  test_handle_dot_command.py  test_main.py  test_version.py
