[project]
name = "polars-prompt"
dynamic = ["version"]
description = "Command line interface for the Polars Python API"
readme = "README.md"
authors = [
    { name = "Emil Sadek", email = "esadek@users.noreply.github.com" }
]
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["polars", "cli", "prompt", "dataframe"]
dependencies = [
    "polars>=1.31.0",
    "prompt-toolkit>=3.0.51",
    "pygments>=2.19.2",
]

[project.scripts]
polars-prompt = "polars_prompt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nox>=2025.5.1",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.hatch.version]
path = "src/polars_prompt/__init__.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
